
  - TypeDecorator is present in the "sqlalchemy" import space.

  - Non-DBAPI errors which occur in the scope of an `execute()`
    call are now wrapped in sqlalchemy.exc.StatementError,
    and the text of the SQL statement and repr() of params
    is included.  This makes it easier to identify statement
    executions which fail before the DBAPI becomes 
    involved.  [ticket:2015]

-sqlite
  - SQLite dialect now uses `NullPool` for file-based databases
    [ticket:1921]

  - The path given as the location of a sqlite database is now
    normalized via os.path.abspath(), so that directory changes
    within the process don't affect the ultimate location
    of a relative file path.  [ticket:2036]

- mssql
  - the String/Unicode types, and their counterparts VARCHAR/
    NVARCHAR, emit "max" as the length when no length is 
    specified, so that the default length, normally '1' 
    as per SQL server documentation, is instead
    'unbounded'.  This also occurs for the VARBINARY type.
    [ticket:1833].

    This behavior makes these types more closely compatible 
    with Postgresql's VARCHAR type which is similarly unbounded 
    when no length is specified.

- mysql
  - New DBAPI support for pymysql, a pure Python port
    of MySQL-python.  [ticket:1991]

- firebird
  - Some adjustments so that Interbase is supported as well.
    FB/Interbase version idents are parsed into a structure
    such as (8, 1, 1, 'interbase') or (2, 1, 588, 'firebird')
    so they can be distinguished. [ticket:1885]

- drizzle
  - New dialect for Drizzle, a MySQL variant.  Uses MySQL-python
    for the DBAPI.  [ticket:2003]

0.6.7
=====
- orm
  - Added a `name` argument to `Query.subquery()`, to allow
    a fixed name to be assigned to the alias object.
    [ticket:2030]

  - A warning is emitted when a joined-table inheriting mapper
    has no primary keys on the locally mapped table
    (but has pks on the superclass table).  [ticket:2019]
